--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 /* font import */
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 /* mixins */
 @mixin for-phone-only {
@@ -33,8 +33,8 @@ body {
 }
 
 body {
-  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
   margin: 0px;
-  background: #1a2942;
+  background: #213455;
   color: #f34a4a;
 }
