changed the primary color for the brand to be a bit dimmer

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,5 +36,5 @@ body {
   font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
   margin: 0px;
   background: #213455;
-  color: #f34a4a;
+  color: #faa478;
 }
