added the material login icon

--- a/src/index.scss
+++ b/src/index.scss
@@ -38,3 +38,7 @@ body {
   background: #213455;
   color: #faa478;
 }
+
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+}
