--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,6 +1,8 @@
 .header {
   display: flex;
-  padding: 8px;
+  padding: 8px 16px;
+  justify-content: space-between;
+  align-items: center;
   background-color: #243c67;
   box-shadow: 0 3px 6px #00000029, 0 3px 6px #0000003b;
 }
