--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -5,8 +5,9 @@ $footer-text-color: #999;
   justify-content: center;
   align-items: center;
   color: $footer-text-color;
-  font-size: 12px;
+  font-size: 10px;
   margin: 4px;
+  background: transparent;
 
   a {
     color: $footer-text-color;
