wired through puzzle id and left a message for the logged out view

--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -1,7 +1,8 @@
 .MainContent {
   display: flex;
 
-  &.loading {
+  &.loading,
+  &.logged-out {
     justify-content: center;
     align-items: center;
   }
