--- a/src/components/SolutionReadout/SolutionReadout.scss
+++ b/src/components/SolutionReadout/SolutionReadout.scss
@@ -5,17 +5,21 @@
   align-items: center;
   gap: 8px;
   margin-top: 8px;
-  padding: 16px;
+  padding: 8px;
 
   .solution-row {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 6px;
 
     .single-solution {
-      padding: 10px;
+      padding: 8px;
+    }
+
+    .bookend-arrows {
+      font-size: 20px;
     }
   }
 }
