added a different message if there isn't a puzzle available

--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -2,7 +2,8 @@
   display: flex;
 
   &.loading,
-  &.logged-out {
+  &.logged-out,
+  &.no-puzzle {
     justify-content: center;
     align-items: center;
   }
